k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: product-catalog
  annotations:
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          serviceName: api
          servicePort: 3000
      - path: /
        pathType: Prefix
        backend:
          serviceName: app
          servicePort: 80
